# python-url-debugger

./: .gitpod.Dockerfile  .gitpod.Dockerfile.slim  .gitpod.yml  README.md  pyproject.toml  setup.cfg  urls.txt
tests/: __init__.py  test_cli.py  test_fetch.py  test_poetry_template.py
url_debugger/: __main__.py  cli.py  exceptions.py  fetch.py
